@@ -1,1 +1,2 @@
 * HTML <base> tag
+* A redirect may cause the wrong filetype to get binded to the new URL
