@@ -7,6 +7,8 @@ Changes and new features:
   in the same MySQL table
 * Bugfix, 'depth_limit' was not copied by the 'copy' keyword
 * Minor bugfix in the xmlconv parser
+* The 'xmlconv' parser will now properly convert incorrectly placed html
+  tags that don't belong to an element
 
 1.7.0
 =====
